# invoice-pdf-automation

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
examples/: README.md  sample_input.csv
src/invoice_automation/: __init__.py  __main__.py  cli.py  config.py  excel_summary.py  models.py  pdf_generator.py  reader.py
tests/: conftest.py  test_excel_summary.py  test_pdf_generator.py  test_reader.py
tests/fixtures/: sample_invoices.csv
